<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:id="@+id/buttonRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button07" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button08" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button09" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnPlusClick"
                android:text="@string/buttonPlus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button04" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button05" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button06" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/buttonMinus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button01" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button02" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button03" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDivClick"
                android:text="@string/buttonDiv" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/buttonClear" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/button00" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="numButtonClick"
                android:text="@string/buttonDot" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMultClick"
                android:text="@string/buttonMult" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="btnEqClick"
            android:text="@string/buttonEq" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>